finish setup passport

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 DEBUG=backend:*
 MONGO_URI=mongodb+srv://farhat18:15bnDsmJqR0C5fC1@cluster0.doxkhkq.mongodb.net/?retryWrites=true&w=majority
+SECRET_OR_KEY=7pP7v2WiyEdC+w==
